@@ -355,30 +355,43 @@ function userlogin()
     }
     $where_is['username'] = htmlsafechars($users_data['username']);
     $whereis_array = [
-        'index' => '%s is viewing the <a href="%s">home page</a>',
-        'browse' => '%s is viewing the <a href="%s">torrents page</a>',
-        'requests' => '%s is viewing the <a href="%s">requests page</a>',
-        'upload' => '%s is viewing the <a href="%s">upload page</a>',
-        'casino' => '%s is viewing the <a href="%s">casino page</a>',
-        'blackjack' => '%s is viewing the <a href="%s">blackjack page</a>',
-        'bet' => '%s is viewing the <a href="%s">bet page</a>',
-        'forums' => '%s is viewing the <a href="%s">forums page</a>',
-        'chat' => '%s is viewing the <a href="%s">irc page</a>',
-        'topten' => '%s is viewing the <a href="%s">statistics page</a>',
-        'faq' => '%s is viewing the <a href="%s">faq page</a>',
-        'rules' => '%s is viewing the <a href="%s">rules page</a>',
-        'staff' => '%s is viewing the <a href="%s">staff page</a>',
-        'announcement' => '%s is viewing the <a href="%s">announcements page</a>',
-        'usercp' => '%s is viewing the <a href="%s">usercp page</a>',
-        'offers' => '%s is viewing the <a href="%s">offers page</a>',
-        'messages' => '%s is viewing the <a href="%s">mailbox page</a>',
-        'userdetails' => '%s is viewing the <a href="%s">personal profile page</a>',
-        'details' => '%s is viewing the <a href="%s">torrents details page</a>',
-        'games' => '%s is viewing the <a href="%s">games page</a>',
-        'arcade' => '%s is viewing the <a href="%s">arcade page</a>',
-        'flash' => '%s is playing a <a href="%s">flash game</a>',
-        'arcade_top_score' => '%s is viewing the <a href="%s">arcade top scores page</a>',
+        'index' => '%s is viewing the <a href="%s">Home Page</a>',
+        'browse' => '%s is viewing the <a href="%s">Torrents Browse Page</a>',
+        'catalog' => '%s is viewing the <a href="%s">Torrents Catalog Page</a>',
+        'offers' => '%s is viewing the <a href="%s">Offers</a>',
+        'requests' => '%s is viewing the <a href="%s">Requests</a>',
+        'upload' => '%s is viewing the <a href="%s">Upload Torrent Page</a>',
+        'casino' => '%s is playing in the <a href="%s">Casino</a>',
+        'blackjack' => '%s is playing the <a href="%s">Blackjack</a>',
+        'bet' => '%s is making a <a href="%s">Bet</a>',
+        'forums' => '%s is viewing the <a href="%s">Forums</a>',
+        'chat' => '%s is viewing the <a href="%s">IRC</a>',
+        'topten' => '%s is viewing the <a href="%s">Statistics</a>',
+        'faq' => '%s is viewing the <a href="%s">FAQ</a>',
+        'rules' => '%s is viewing the <a href="%s">Rules</a>',
+        'staff' => '%s is viewing the <a href="%s">Staff Page</a>',
+        'announcement' => '%s is viewing the <a href="%s">Announcements/a>',
+        'usercp' => '%s is viewing the <a href="%s">Users Control Panel</a>',
+        'messages' => '%s is viewing the <a href="%s">Mailbox</a>',
+        'userdetails' => '%s is viewing the <a href="%s">Personal Profile</a>',
+        'details' => '%s is viewing the <a href="%s">Torrents Detail</a>',
+        'games' => '%s is viewing the <a href="%s">Games</a>',
+        'arcade' => '%s is viewing the <a href="%s">Arcade</a>',
+        'flash' => '%s is playing a <a href="%s">Flash Game</a>',
+        'arcade_top_score' => '%s is viewing the <a href="%s">Arcade Top Scores</a>',
         'staffpanel' => '%s is viewing the <a href="%s">Staff Panel</a>',
+        'movies' => '%s is viewing the <a href="%s">Movies and TV</a>',
+        'needseeds' => '%s is viewing the <a href="%s">Need Seeds Page</a>',
+        'bitbucket' => '%s is viewing the <a href="%s">Bitbucket</a>',
+        'mybonus' => '%s is viewing the <a href="%s">Karma Store</a>',
+        'getrss' => '%s is viewing the <a href="%s">RSS</a>',
+        'rsstfreak' => '%s is viewing the <a href="%s">Torrent Freak Page</a>',
+        'wiki' => '%s is viewing the <a href="%s">Wiki Page</a>',
+        'lottery' => '%s is playing the <a href="%s">Lottery</a>',
+        'bookmarks' => '%s is viewing the <a href="%s">Bookmarks Page</a>',
+        'sharemarks' => '%s is viewing the <a href="%s">Sharemarks Page</a>',
+        'friends' => '%s is viewing the <a href="%s">Friends List</a>',
+        'users' => '%s is searching the <a href="%s">Users</a>',
         'unknown' => '%s location is unknown',
     ];
     if (preg_match('/\/(.*?)\.php/is', $_SERVER['REQUEST_URI'], $whereis_temp)) {
